host-manager.xml template added (not working yet)

--- a/java/tomcat9/templates/tomcat-users.xml.j2
+++ b/java/tomcat9/templates/tomcat-users.xml.j2
@@ -42,5 +42,7 @@
   <user username="role1" password="<must-be-changed>" roles="role1"/>
 -->
   <role rolename="manager-gui"/>
+  <role rolename="admin-script"/>
+
   <user username="tomcat" password="secret" roles="manager-gui"/>
 </tomcat-users>
