--- a/java/tomcat9/templates/host-manager.xml.j2
+++ b/java/tomcat9/templates/host-manager.xml.j2
@@ -1,4 +1,4 @@
 <Context privileged="true" antiResourceLocking="false"
-         docBase="${catalina.home}/webapps/manager">
+         docBase="${catalina.home}/webapps/host-manager">
     <Valve className="org.apache.catalina.valves.RemoteAddrValve" allow="^.*$" />
 </Context>
